fixed edge left-side scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+	 -ms-overflow-style: none;
 }
 
 body {
